PHP                                                                        NEWS
|||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||
?? ??? 2006, PHP 5.2.0
- Added memory_get_peak_usage() function for retrieving peak memory usage of
  a PHP script. (Ilia)
- Changed Apache 2 Handler SAPI to call ap_set_content_type() once only. (Mike)
- Changed E_ALL error reporting mode to include E_RECOVERABLE_ERROR. (Marcus)
- Added control character checks for cURL extension's open_basedir/safe_mode
  checks. (Ilia)
- Disable realpath cache when open_basedir or safe_mode are enabled on a 
  per-request basis. (Ilia)
- Optimized zend_try/zend_catch macros (eliminated memcpy()). (Dmitry)
- Optimized require_once/include_once (eliminated fopen() on second usage).
  (Dmitry)
- Optimized request shutdown sequence. Restoring ini directives now
  iterates over modified directives only instead of all. (Dmitry)
- FastCGI SAPI improved. (Dmitry)
  . Removed source compatibility with libfcgi
  . Optimized access to FastCGI environment variables using HashTable instead
    of linear search
  . Allowed PHP_FCGI_MAX_REQUESTS=0, that assumes no limit
  . Allowed PHP_FCGI_CHILDREN=0, that assumes no worker children (FastCGI
    requests are handled by main process itself).
- Added new error mode E_RECOVERABLE_ERROR. (Derick, Marcus, Tony)
- Added support for getenv() input filtering. (Rasmus)
- Removed ze1 compatibility mode. (Marcus)
- Added support for constructors in interfaces to force constructor signature
  checks in implementations. (Marcus)
- Changed __toString to be called wherever applicable. (Marcus)
- Improved xmlReader: (Rob)
  . Added readInnerXml(), xmlReader::setSchema().
  . Added readInnerXML(), readOuterXML(), readString(), setSchema(). (2.6.20+)
  . Changed to passing libxml options when loading reader.
- Improved PDO:
  . Added new attribute ATTR_DEFAULT_FETCH_MODE. (Pierre)
  . Added FETCH_PROPS_LATE. (Marcus)
- Improved SPL: (Marcus)